[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/etc/controlHint.gd" type="Script" id=1]
[ext_resource path="res://scenes/etc/hboxControlHint.tscn" type="PackedScene" id=2]
[ext_resource path="res://controlHintTheme.tres" type="Theme" id=3]

[node name="controlHint" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="marginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="panelContainer" type="PanelContainer" parent="marginContainer"]
margin_left = 4.0
margin_top = 188.0
margin_right = 128.0
margin_bottom = 246.0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="vBoxContainer" type="VBoxContainer" parent="marginContainer/panelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 117.0
margin_bottom = 51.0
size_flags_vertical = 8

[node name="hboxControlHint" parent="marginContainer/panelContainer/vBoxContainer" instance=ExtResource( 2 )]
margin_right = 110.0
strFunction = "Switch"

[node name="hboxControlHint2" parent="marginContainer/panelContainer/vBoxContainer" instance=ExtResource( 2 )]
margin_top = 20.0
margin_right = 110.0
margin_bottom = 36.0
strCommand = "Hold"
strFunction = "Select"

[node name="progressBarHold" type="ProgressBar" parent="marginContainer/panelContainer/vBoxContainer"]
margin_top = 40.0
margin_right = 110.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 4 )
percent_visible = false
